[life-xp-xp-service-19] implement xp/add method - cassandra db support added
